--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </h6>
             <span class="magnetic-strip"></span>
             <div class="signature"> <i>005</i></div>
-            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos commodi fugit sint recusandae tempore pariatur ratione accusamus rerum sequi dignissimos quo minus, vero nesciunt! Sunt voluptates perferendis rem qui corrupti., ipsum dolor. cupiditate rem illo, non esse sunt laudantium.</h5>
+            <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos commodi fugit sint recusandae tempore pariatur ratione accusamus rerum sequi dignissimos quo minus, vero nesciunt! Sunt.</h5>
              </div>
             </div>
         </div>
